# Scaffold_node_golang

./: README.md  pyproject.toml
src/forge.egg-info/: PKG-INFO  SOURCES.txt
src/forge/application/commands/: create_project_command.py
src/forge/application/mappers/: project_mapper.py
src/forge/application/ports/: architecture_generator.py  project_generator.py  system_architecture_generator.py
src/forge/application/use_cases/create_project/: create_project_use_case.py  project_creator.py
src/forge/cli/: main.py
src/forge/cli/commands/: init.py
src/forge/cli/config/: load_config.py
src/forge/cli/defauts/: project_defaults.py
src/forge/cli/flows/: create_project_flow.py
src/forge/cli/prompts/: project_prompts.py
src/forge/domain/: architecture.py  project.py  system_architecture.py
src/forge/infrastructure/generators/: base_generator.py  generator_factory.py  node_project_generator.py
src/forge/infrastructure/generators/architecture/: api_template_generator.py  architecture_factory.py  base_architecture_generator.py  microservices_template_generator.py  modular_template_generator.py
src/forge/infrastructure/generators/core/: api_template_config.py  api_template_generator.py
src/forge/infrastructure/generators/project/: go_generator.py  nest_Project_Generator.py  node_project_generator.py
src/forge/infrastructure/generators/system_architectures/: base_system_generator.py  microservices_generator.py  modular_monolith_generator.py  monolith_generator.py  (+2 more)
src/forge_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+62 files in other folders)
