[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.1.0"
description = "Forge - Project scaffold CLI"
requires-python = ">=3.10"
dependencies = [
  "questionary>=2.0.0"
]

[project.scripts]
forge = "forge.cli.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
